hack out initial solution to WIM and multiple imputations hack changes to sql query.  need to test  modified:   lib/detector.area.data.refactor.js
add dependencies for new version of npm to use
 modified:   package.json

how to test calls
 new file:   test/405test.call.txt

useful sql while developing
 new file:   test/detector.hourly.truck.def.sql.txt

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
   "directories": {
     "lib": "./lib"
   },
-  "engines": {
-    "node": "*"
-  }
+    "dependencies" :    {
+        "pg" : ""
+        ,"caching_service" : ""
+        ,"underscore" : ""
+    },
+    "engines": {
+        "node": "*"
+    }
 }
