fixed to properly grab from wim data too.  Tested on I5 Irvine (sites 15,16)
modified:   lib/detector.area.data.refactor.js
modified:   package.json
modified:   test/detector.hourly.truck.def.sql.txt

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
       "pg":""
-      ,"caching-service":""
+      ,"caching_service":""
       ,"underscore" : ""
   },
   "devDependencies": {},
