--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "pg": "",
     "caching_service": "",
-    "makedir": "0.0.3",
+    "makedir": "~0.0.4",
     "underscore": "",
     "couchdb": "1.0.3"
   },
