--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "pg": "",
     "caching_service": "",
-    "makedir": "~0.0.4",
+    "makedir": ">0.0.4",
     "underscore": "",
+    "request": "",
     "couchdb": "1.0.3"
   },
   "devDependencies": {},
