seems to be working, need to run on anne or lysithia to make sure
modified:   lib/detector.area.data.refactor.js
modified:   lib/doDataQueryCDB.js
modified:   lib/doneDataCDBSumup.js
modified:   lib/doneGeoQuery.js
modified:   lib/geoQuery.js
modified:   lib/precache_execute.js
modified:   lib/precache_known_combinations.js
modified:   package.json
modified:   test/daDataQueryCDBTest.js

--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "node": ">0.4.8"
   },
   "dependencies": {
-    "pg": "",
+    "pg": "https://github.com/brianc/node-postgres/tarball/master",
     "caching_service": "",
     "makedir": ">0.0.4",
     "underscore": "",
-    "request": "",
+    "request": "https://github.com/mikeal/request/tarball/master",
     "async": "",
     "couchdb": "1.0.3"
   },
