--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "geo_bbox",
-  "description": "Use geos wrapper to snip geojson geometries to a passed bounding box",
-  "version": "0.0.8",
+  "description": "Use geos wrapper to snip geojson geometries to a passed bounding box.  and other stuff too",
+  "version": "0.1.0",
   "homepage": "http://www.github.com/jmarca",
   "author": "James E. Marca <jmarca@translab.its.uci.edu> (http://www.activimetrics.com)",
   "directories": {
@@ -19,7 +19,9 @@
     "async": "",
     "couchdb": "1.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+      "nodeunit":""
+  },
   "repository": {
     "url": ""
   },
