mostly working version of aggregation
looks good, but for the underlying data!
 modified:   aggregate_from_hourly.js
 modified:   execute_aggregate_hourly.js
 modified:   globals.js

added a requirement for my hack on date-functions.js
modified:   ../package.json

--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "lib": "./lib"
   },
   "engines": {
-    "node": ">0.4.8"
+    "node": ">0.6"
   },
   "dependencies": {
-    "pg": "https://github.com/brianc/node-postgres/tarball/master",
+      "pg": "",
     "caching_service": "",
-    "makedir": ">0.0.4",
+    "makedir": "",
     "underscore": "",
-    "request": "https://github.com/mikeal/request/tarball/master",
+      "request": "",
     "async": "",
-    "couchdb": "1.0.3"
+      "couchdb": "1.0.3",
+      "date-functions":""
   },
   "devDependencies": {
       "nodeunit":""
