modified test a bit
I don't have 2007 on my laptop, so I'm now using 2012

should probably parameterize it in test.config.json

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "config_okay": "0.0.3",
     "express": "",
     "mocha": "^2.5.3",
-    "should": "",
+    "should": "^9.0.2",
+    "should-http": "0.0.4",
     "superagent": ""
   },
   "repository": {
